[package]
name = "elgato-streamdeck"
description = "HidApi driver for Elgato Stream Decks"
authors = ["TheJebForge"]
version = "0.4.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/streamduck-org"
repository = "https://github.com/streamduck-org/elgato-streamdeck"
license = "MPL-2.0"

[dependencies]
hidapi = { version = "2.6", default-features = false }
image = { version = "0.25.5", default-features = false, features = ["bmp", "jpeg"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
